CMAPI2-248# Design First approach changes using openapi
